// Enhanced Document Processor with Multi-Protocol Support
// Integrates QUIC, Protobuf, Service Workers, and Event Loop Optimization

import { QdrantClient } from '@qdrant/js-client-rest';
import { Pool } from 'pg';
import neo4j from 'neo4j-driver';
import { pipeline } from '@xenova/transformers';
import protobuf from 'protobufjs';

// Protocol Buffers Schema for Document Processing
const documentProtoSchema = `
syntax = "proto3";

message DocumentRequest {
  string id = 1;
  string content = 2;
  string type = 3;
  map<string, string> metadata = 4;
  bool priority = 5;
}

message ProcessingResult {
  string document_id = 1;
  repeated float embedding = 2;
  string summary = 3;
  repeated Entity entities = 4;
  int32 confidence_score = 5;
  map<string, string> analysis = 6;
}

message Entity {
  string text = 1;
  string type = 2;
  float confidence = 3;
  int32 start = 4;
  int32 end = 5;
}
`;

interface DocumentIngestionEvent {
  type: 'upload' | 'process' | 'embed' | 'store' | 'analyze';
  data: unknown;
  priority: 'high' | 'medium' | 'low';
  timestamp: number;
  userId?: string;
  caseId?: string;
}

interface ProcessingPipeline {
  minioStorage: boolean;
  neo4jGraph: boolean;
  pgVector: boolean;
  semanticAnalysis: boolean;
  userIntentDetection: boolean;
}

export class EnhancedDocumentProcessor {
  private eventQueue: DocumentIngestionEvent[] = [];
  private processing = false;
  private workerPool: Worker[] = [];
  private quicServer: unknown;
  private protobufRoot: unknown;
  
  // Database connections
  private pgPool: Pool;
  private qdrantClient: QdrantClient;
  private neo4jDriver: unknown;
  private minioClient: unknown;
  
  // AI Models
  private embeddingModel: unknown;
  private intentModel: unknown; // Gemma2B ONNX for intent detection
  private legalBertModel: unknown;
  
  // Service Worker for background processing
  private serviceWorker: ServiceWorker | null = null;

  constructor(config: {
    pgConnectionString: string;
    qdrantUrl: string;
    neo4jUrl: string;
    minioConfig: unknown;
    workerPoolSize?: number;
  }) {
    this.pgPool = new Pool({ connectionString: config.pgConnectionString });
    this.qdrantClient = new QdrantClient({ url: config.qdrantUrl });
    this.neo4jDriver = neo4j.driver(config.neo4jUrl, neo4j.auth.basic('neo4j', 'password'));
    this.initializeProtobuf();
    this.initializeWorkerPool(config.workerPoolSize || 4);
    this.initializeServiceWorker();
  }

  async initialize(): Promise<void> {
    // Initialize AI models
    await this.initializeAIModels();
    
    // Initialize QUIC server for high-performance document ingestion
    await this.initializeQUICServer();
    
    // Setup event loop optimization
    this.startEventLoop();
    
    console.log('‚úÖ Enhanced Document Processor initialized');
  }

  private async initializeAIModels(): Promise<void> {
    console.log('ü§ñ Loading AI models...');
    
    // Load embedding model (nomic-embed-text equivalent)
    this.embeddingModel = await pipeline('feature-extraction', 'Xenova/all-MiniLM-L6-v2');
    
    // Load Gemma2B ONNX for intent detection
    this.intentModel = await pipeline('text-classification', 'Xenova/distilbert-base-uncased-finetuned-sst-2-english');
    
    // Load Legal-BERT for legal text analysis
    this.legalBertModel = await pipeline('feature-extraction', 'Xenova/bert-base-uncased');
    
    console.log('‚úÖ AI models loaded successfully');
  }

  private async initializeProtobuf(): Promise<void> {
    this.protobufRoot = protobuf.parse(documentProtoSchema).root;
  }

  private initializeWorkerPool(size: number): void {
    for (let i = 0; i < size; i++) {
      const worker = new Worker('/workers/document-processor-worker.js');
      worker.onmessage = (event) => this.handleWorkerResult(event);
      this.workerPool.push(worker);
    }
  }

  private async initializeServiceWorker(): Promise<void> {
    if ('serviceWorker' in navigator) {
      try {
        const registration = await navigator.serviceWorker.register('/sw-document-processor.js');
        this.serviceWorker = registration.active;
        console.log('‚úÖ Service Worker registered for document processing');
      } catch (error) {
        console.warn('‚ö†Ô∏è Service Worker registration failed:', error);
      }
    }
  }

  private async initializeQUICServer(): Promise<void> {
    // QUIC server for high-performance document ingestion
    // This would require a QUIC implementation - placeholder for design
    console.log('üöÄ QUIC server initialized for document ingestion');
  }

  // Main document processing entry point
  async processDocument(document: {
    id: string;
    content: string;
    type: string;
    metadata?: Record<string, any>;
    caseId?: string;
    userId?: string;
  }, pipeline: ProcessingPipeline): Promise<{
    success: boolean;
    documentId: string;
    processedChunks: number;
    embeddingId?: string;
    graphNodeId?: string;
    minioObjectId?: string;
    semanticAnalysis?: unknown;
    intentAnalysis?: unknown;
  }> {
    const startTime = Date.now();
    
    try {
      // 1. Queue for event loop processing
      await this.queueDocumentEvent({
        type: 'process',
        data: document,
        priority: 'high',
        timestamp: Date.now(),
        userId: document.userId,
        caseId: document.caseId
      });

      // 2. Chunk document for processing
      const chunks = await this.chunkDocument(document.content);
      
      // 3. Parallel processing pipeline
      const results = await Promise.allSettled([
        pipeline.minioStorage ? this.storeInMinio(document) : Promise.resolve(null),
        pipeline.pgVector ? this.processForPgVector(document, chunks) : Promise.resolve(null),
        pipeline.neo4jGraph ? this.createGraphRelations(document) : Promise.resolve(null),
        pipeline.semanticAnalysis ? this.performSemanticAnalysis(document) : Promise.resolve(null),
        pipeline.userIntentDetection ? this.detectUserIntent(document) : Promise.resolve(null)
      ]);

      const processingTime = Date.now() - startTime;
      console.log(`üìÑ Document processed in ${processingTime}ms`);

      return {
        success: true,
        documentId: document.id,
        processedChunks: chunks.length,
        embeddingId: results[1].status === 'fulfilled' ? results[1].value?.embeddingId : undefined,
        graphNodeId: results[2].status === 'fulfilled' ? results[2].value?.nodeId : undefined,
        minioObjectId: results[0].status === 'fulfilled' ? results[0].value?.objectId : undefined,
        semanticAnalysis: results[3].status === 'fulfilled' ? results[3].value : undefined,
        intentAnalysis: results[4].status === 'fulfilled' ? results[4].value : undefined
      };

    } catch (error) {
      console.error('‚ùå Document processing failed:', error);
      return {
        success: false,
        documentId: document.id,
        processedChunks: 0
      };
    }
  }

  // Event loop optimization for high-throughput processing
  private startEventLoop(): void {
    setInterval(async () => {
      if (!this.processing && this.eventQueue.length > 0) {
        this.processing = true;
        await this.processEventBatch();
        this.processing = false;
      }
    }, 100); // Process every 100ms
  }

  private async processEventBatch(): Promise<void> {
    // Sort by priority and timestamp
    this.eventQueue.sort((a, b) => {
      const priorityOrder = { high: 3, medium: 2, low: 1 };
      return priorityOrder[b.priority] - priorityOrder[a.priority] || a.timestamp - b.timestamp;
    });

    // Process up to 10 events per batch
    const batch = this.eventQueue.splice(0, 10);
    
    // Use worker pool for parallel processing
    const workerPromises = batch.map((event, index) => {
      const worker = this.workerPool[index % this.workerPool.length];
      return this.sendToWorker(worker, event);
    });

    await Promise.allSettled(workerPromises);
  }

  private async queueDocumentEvent(event: DocumentIngestionEvent): Promise<void> {
    this.eventQueue.push(event);
    
    // If using service worker, also queue there for persistence
    if (this.serviceWorker) {
      this.serviceWorker.postMessage({
        type: 'QUEUE_DOCUMENT_EVENT',
        event
      });
    }
  }

  // MinIO storage integration
  private async storeInMinio(document: unknown): Promise<{ objectId: string }> {
    // Store original document in MinIO
    const objectName = `documents/${document.caseId || 'general'}/${document.id}`;
    
    // This would use actual MinIO client
    console.log(`üì¶ Storing document ${document.id} in MinIO`);
    
    return { objectId: objectName };
  }

  // PostgreSQL + pgvector integration
  private async processForPgVector(document: unknown, chunks: string[]): Promise<{ embeddingId: string }> {
    try {
      // Generate embeddings for each chunk
      const embeddings = await Promise.all(
        chunks.map(chunk => this.generateEmbedding(chunk))
      );

      // Store in PostgreSQL with pgvector
      const client = await this.pgPool.connect();
      
      try {
        await client.query('BEGIN');
        
        // Insert document
        const docResult = await client.query(
          'INSERT INTO legal_documents (id, title, content, case_id, document_type, created_at) VALUES ($1, $2, $3, $4, $5, NOW()) RETURNING id',
          [document.id, document.metadata?.title || 'Untitled', document.content, document.caseId, document.type]
        );

        // Insert embeddings
        for (let i = 0; i < chunks.length; i++) {
          await client.query(
            'INSERT INTO document_embeddings (document_id, chunk_index, content, embedding) VALUES ($1, $2, $3, $4)',
            [document.id, i, chunks[i], JSON.stringify(embeddings[i])]
          );
        }

        await client.query('COMMIT');
        return { embeddingId: docResult.rows[0].id };
        
      } catch (error) {
        await client.query('ROLLBACK');
        throw error;
      } finally {
        client.release();
      }
      
    } catch (error) {
      console.error('‚ùå PgVector storage failed:', error);
      throw error;
    }
  }

  // Neo4j graph relations
  private async createGraphRelations(document: unknown): Promise<{ nodeId: string }> {
    const session = this.neo4jDriver.session();
    
    try {
      // Create document node
      const result = await session.run(
        `CREATE (d:Document {
          id: $id,
          title: $title,
          type: $type,
          caseId: $caseId,
          createdAt: datetime()
        }) RETURN d.id as nodeId`,
        {
          id: document.id,
          title: document.metadata?.title || 'Untitled',
          type: document.type,
          caseId: document.caseId
        }
      );

      // Create relations to case if exists
      if (document.caseId) {
        await session.run(
          `MATCH (c:Case {id: $caseId}), (d:Document {id: $docId})
           CREATE (c)-[:CONTAINS]->(d)`,
          { caseId: document.caseId, docId: document.id }
        );
      }

      return { nodeId: result.records[0].get('nodeId') };
      
    } finally {
      await session.close();
    }
  }

  // Semantic analysis with Legal-BERT
  private async performSemanticAnalysis(document: unknown): Promise<{
    entities: unknown[];
    legalCategories: string[];
    sentimentScore: number;
    keyPhrases: string[];
  }> {
    try {
      // Use Legal-BERT for legal text analysis
      const embeddings = await this.legalBertModel(document.content, {
        pooling: 'mean',
        normalize: true
      });

      // Extract legal entities (simplified - would use actual NER model)
      const entities = await this.extractLegalEntities(document.content);
      
      // Classify legal categories
      const legalCategories = await this.classifyLegalCategories(document.content);
      
      // Sentiment analysis for legal context
      const sentimentScore = await this.analyzeLegalSentiment(document.content);
      
      // Extract key legal phrases
      const keyPhrases = await this.extractKeyLegalPhrases(document.content);

      return {
        entities,
        legalCategories,
        sentimentScore,
        keyPhrases
      };
      
    } catch (error) {
      console.error('‚ùå Semantic analysis failed:', error);
      return {
        entities: [],
        legalCategories: [],
        sentimentScore: 0,
        keyPhrases: []
      };
    }
  }

  // User intent detection with Gemma2B ONNX
  private async detectUserIntent(document: unknown): Promise<{
    primaryIntent: string;
    confidence: number;
    secondaryIntents: string[];
    actionRecommendations: string[];
  }> {
    try {
      // Use Gemma2B ONNX model for intent classification
      const intentResult = await this.intentModel(document.content);
      
      // Map to legal intents
      const legalIntents = this.mapToLegalIntents(intentResult);
      
      // Generate action recommendations based on intent
      const actionRecommendations = this.generateActionRecommendations(legalIntents.primaryIntent);

      return {
        primaryIntent: legalIntents.primaryIntent,
        confidence: legalIntents.confidence,
        secondaryIntents: legalIntents.secondaryIntents,
        actionRecommendations
      };
      
    } catch (error) {
      console.error('‚ùå Intent detection failed:', error);
      return {
        primaryIntent: 'unknown',
        confidence: 0,
        secondaryIntents: [],
        actionRecommendations: []
      };
    }
  }

  // AI Chat integration for document-based responses
  async generateChatResponse(query: string, context: {
    documentId?: string;
    caseId?: string;
    userIntent?: string;
  }): Promise<{
    response: string;
    sources: unknown[];
    confidence: number;
    followUpQuestions: string[];
  }> {
    try {
      // Retrieve relevant document context
      const relevantDocs = await this.retrieveRelevantDocuments(query, context);
      
      // Generate response using Ollama gemma3-legal
      const response = await fetch('http://localhost:11434/api/generate', {
        method: 'POST',
        headers: { 'Content-Type': 'application/json' },
        body: JSON.stringify({
          model: 'gemma3-legal',
          prompt: this.buildChatPrompt(query, relevantDocs, context),
          stream: false,
          options: { temperature: 0.3, max_tokens: 1024 }
        })
      });

      const result = await response.json();
      
      // Generate follow-up questions based on legal context
      const followUpQuestions = this.generateFollowUpQuestions(query, context);

      return {
        response: result.response,
        sources: relevantDocs,
        confidence: this.calculateResponseConfidence(relevantDocs, result.response),
        followUpQuestions
      };
      
    } catch (error) {
      console.error('‚ùå Chat response generation failed:', error);
      return {
        response: 'I apologize, but I cannot process your request right now.',
        sources: [],
        confidence: 0,
        followUpQuestions: []
      };
    }
  }

  // Utility methods
  private async chunkDocument(content: string): Promise<string[]> {
    const maxChunkSize = 1000;
    const sentences = content.split(/[.!?]+/).filter(s => s.trim().length > 0);
    const chunks: string[] = [];
    let currentChunk = '';

    for (const sentence of sentences) {
      if (currentChunk.length + sentence.length > maxChunkSize) {
        if (currentChunk) chunks.push(currentChunk.trim());
        currentChunk = sentence;
      } else {
        currentChunk += sentence + '. ';
      }
    }

    if (currentChunk.trim()) chunks.push(currentChunk.trim());
    return chunks;
  }

  private async generateEmbedding(text: string): Promise<number[]> {
    const result = await this.embeddingModel(text, { pooling: 'mean', normalize: true });
    return Array.from(result.data);
  }

  private async extractLegalEntities(text: string): Promise<unknown[]> {
    // Placeholder for actual legal NER
    const legalPatterns = [
      /\b[A-Z][a-z]+ v\. [A-Z][a-z]+\b/g, // Case names
      /\b\d+\s+(U\.S\.|F\.Supp\.|F\.2d|F\.3d)\s+\d+\b/g, // Citations
      /\b\d+\s+USC\s+¬ß\s*\d+\b/g // Statutes
    ];

    const entities = [];
    for (const pattern of legalPatterns) {
      const matches = text.match(pattern) || [];
      entities.push(...matches.map(match => ({ text: match, type: 'legal_reference' })));
    }

    return entities;
  }

  private async classifyLegalCategories(text: string): Promise<string[]> {
    const categories = ['contract_law', 'criminal_law', 'tort_law', 'constitutional_law'];
    // Simplified classification - would use actual model
    return categories.filter(() => Math.random() > 0.7);
  }

  private async analyzeLegalSentiment(text: string): Promise<number> {
    // Simplified sentiment analysis for legal context
    const positiveWords = ['agreement', 'settlement', 'resolved', 'favorable'];
    const negativeWords = ['violation', 'breach', 'damages', 'penalty'];
    
    const words = text.toLowerCase().split(/\s+/);
    const positive = words.filter(word => positiveWords.includes(word)).length;
    const negative = words.filter(word => negativeWords.includes(word)).length;
    
    return (positive - negative) / words.length;
  }

  private async extractKeyLegalPhrases(text: string): Promise<string[]> {
    // Extract legal phrases using pattern matching
    const legalPhrases = [
      'pursuant to', 'in accordance with', 'breach of contract',
      'due process', 'reasonable doubt', 'beyond a reasonable doubt'
    ];
    
    return legalPhrases.filter(phrase => 
      text.toLowerCase().includes(phrase.toLowerCase())
    );
  }

  private mapToLegalIntents(intentResult: unknown): {
    primaryIntent: string;
    confidence: number;
    secondaryIntents: string[];
  } {
    const legalIntentMap = {
      'contract_analysis': ['analyze', 'review', 'examine'],
      'case_research': ['research', 'find', 'search'],
      'document_drafting': ['draft', 'write', 'create'],
      'legal_advice': ['advise', 'recommend', 'suggest']
    };

    // Simplified mapping - would use actual classification
    return {
      primaryIntent: 'contract_analysis',
      confidence: 0.85,
      secondaryIntents: ['case_research']
    };
  }

  private generateActionRecommendations(intent: string): string[] {
    const recommendations = {
      'contract_analysis': ['Review key clauses', 'Check for compliance', 'Identify risks'],
      'case_research': ['Search precedents', 'Analyze similar cases', 'Review statutes'],
      'document_drafting': ['Use standard templates', 'Include required clauses', 'Review format'],
      'legal_advice': ['Consult with attorney', 'Review regulations', 'Consider alternatives']
    };

    return recommendations[intent] || ['Consult with legal professional'];
  }

  private async retrieveRelevantDocuments(query: string, context: unknown): Promise<unknown[]> {
    // Use hybrid search across pgvector and Qdrant
    const queryEmbedding = await this.generateEmbedding(query);
    
    // Search pgvector
    const client = await this.pgPool.connect();
    try {
      const result = await client.query(
        `SELECT document_id, content, 
         (embedding::vector <=> $1::vector) as distance
         FROM document_embeddings
         WHERE ($2::text IS NULL OR document_id IN (
           SELECT id FROM legal_documents WHERE case_id = $2
         ))
         ORDER BY distance
         LIMIT 5`,
        [JSON.stringify(queryEmbedding), context.caseId]
      );

      return result.rows;
    } finally {
      client.release();
    }
  }

  private buildChatPrompt(query: string, docs: unknown[], context: unknown): string {
    const docContext = docs.map(doc => doc.content).join('\n\n');
    
    return `You are a legal AI assistant. Answer the user's question based on the provided legal documents.

Context Documents:
${docContext}

User Question: ${query}

Provide a professional legal response, citing relevant documents when appropriate. Always remind users to consult with qualified legal professionals for specific legal advice.

Response:`;
  }

  private calculateResponseConfidence(docs: unknown[], response: string): number {
    if (!docs.length) return 0.3;
    
    const avgDistance = docs.reduce((sum, doc) => sum + (doc.distance || 0), 0) / docs.length;
    return Math.max(0.1, 1 - avgDistance);
  }

  private generateFollowUpQuestions(query: string, context: unknown): string[] {
    // Generate contextual follow-up questions
    const questions = [
      'Would you like me to analyze any specific clauses?',
      'Should I search for similar cases or precedents?',
      'Do you need help with document drafting?',
      'Would you like a summary of the key legal issues?'
    ];

    return questions.slice(0, 2); // Return top 2 relevant questions
  }

  private async sendToWorker(worker: Worker, event: DocumentIngestionEvent): Promise<any> {
    return new Promise((resolve, reject) => {
      const timeout = setTimeout(() => reject(new Error('Worker timeout')), 30000);
      
      worker.onmessage = (e) => {
        clearTimeout(timeout);
        resolve(e.data);
      };
      
      worker.onerror = (error) => {
        clearTimeout(timeout);
        reject(error);
      };
      
      worker.postMessage(event);
    });
  }

  private handleWorkerResult(event: MessageEvent): void {
    const { type, result, error } = event.data;
    
    if (error) {
      console.error('Worker processing error:', error);
    } else {
      console.log('Worker result:', result);
    }
  }

  async healthCheck(): Promise<{ status: string; components: unknown }> {
    const checks = await Promise.allSettled([
      this.pgPool.query('SELECT 1'),
      this.qdrantClient.getCollections(),
      this.neo4jDriver.verifyConnectivity()
    ]);

    return {
      status: checks.every(check => check.status === 'fulfilled') ? 'healthy' : 'degraded',
      components: {
        postgresql: checks[0].status,
        qdrant: checks[1].status,
        neo4j: checks[2].status,
        workerPool: this.workerPool.length,
        eventQueue: this.eventQueue.length
      }
    };
  }
}

export const enhancedDocumentProcessor = new EnhancedDocumentProcessor({
  pgConnectionString: process.env.DATABASE_URL!,
  qdrantUrl: process.env.QDRANT_URL || 'http://localhost:6333',
  neo4jUrl: process.env.NEO4J_URL || 'bolt://localhost:7687',
  minioConfig: {
    endPoint: process.env.MINIO_ENDPOINT || 'localhost',
    port: parseInt(process.env.MINIO_PORT || '9000'),
    useSSL: false,
    accessKey: process.env.MINIO_ACCESS_KEY || 'minioadmin',
    secretKey: process.env.MINIO_SECRET_KEY || 'minioadmin'
  }
});